# GEOShs

./: CMakeLists.txt  README.md  components.yaml
config/: GEOSgcm_GridComp.sparse  NCEP_Shared.sparse
src/Applications/: CMakeLists.txt
src/Applications/GEOShs_App/: CMakeLists.txt  GEOShs.F90
